--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <img src="./assets/images/tinDog1.png" alt="Tindog" class="projImg">
               <img src="./assets/images/tinDog2.png" alt="Tindog" class="projImg">
               <p>Tindog  is a practice project of a fictional dog adoption agency as directed by Angela Yu of the App Brewery during frontend web development coure on Udemy. The site was made using BOOTSRAP</p>
-              <a href="https://github.com/WahabAG/Tindog/" class="btn">VISIT</a>
+              <a href="https://wahabag.github.io/Tindog/" class="btn">VISIT</a>
 
             </div>
 
@@ -65,7 +65,7 @@
               <img src="./assets/images/zeeTrends1.png" alt="ZeeTrends" class="projImg">
               <img src="./assets/images/zeeTrends2.png" alt="ZeeTrends" class="projImg">
               <p> Personal project created for a fashion design brand known a ZeeTrends Clothing for parctice purpose. Brand is a real existing brand. it is a multiple paged website created using grid and flexbox layout.</p>
-              <a href="https://github.com/WahabAG/ZeeTrends/x" class="btn">VISIT</a>
+              <a href="https://wahabag.github.io/ZeeTrends/" class="btn">VISIT</a>
             </div>
 
             <div class="project3">
@@ -73,7 +73,7 @@
               <img src="./assets/images/flexBox.png" alt="Flexbox" class="projImg">
               <img src="./assets/images/grid.png" alt="Grid" class="projImg">
               <p> Practice project done during the aquisation of knowledge of flexbox and grid layout a diredted by Travsey Media on Youtube. First image a done with flexbox while the second image a layered using grid.</p>
-              <a href="https://github.com/WahabAG/Flexbox-and-Grid/" class="btn">VISIT</a>
+              <a href="https://wahabag.github.io/Flexbox-and-Grid/" class="btn">VISIT</a>
             </div>
 
           </div>
@@ -85,7 +85,7 @@
           <p class="topP">If you have any questions or have say job commision plese contact me by sending a direct message on any of the platforms bellow <br>
             NOTE: All sites will be hosted on gitHub
           </p>
-          <a class="btn" href="mailto:azeezwahab24@gmail.com">CONTACT ME</a> <a href="https://github.com/WahabAG/cv/" class="btn">RESUME</a>
+          <a class="btn" href="mailto:azeezwahab24@gmail.com">CONTACT ME</a> <a href="https://wahabag.github.io/cv/" class="btn">RESUME</a>
         </div>
     </div>
     <hr>
